refactoring create-user-handler
